upgrade speech recognation and some refactor codes